--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
       <h2>DEVICE</h2>
     
     <ul class="footer-menu-small">
-      <li><a href="#" class="sign-in footer">Войти</a></li>
-      <li><a href="#" class="compare footer" >Сравнить</a></li>
-      <li><a href="#" class="cart footer">Корзина</a></li>
+      <li><a href="#" class="user-name">Войти</a></li>
+      <li><a href="#" class="compare" >Сравнить</a></li>
+      <li><a href="#" class="cart">Корзина</a></li>
     </ul>
     </div>
     <div class="footer-middle">
@@ -222,9 +222,9 @@
     </div>
     <div class="footer-bottom">
     <ul class="footer-social">
-      <li><a href="#">Facebook</a></li>
-      <li><a href="#">Instagram</a></li>
-      <li><a href="#">Twiter</a></li>
+        <li><a href="#" class="fb"><span class="visually-hidden">Facebook</span></a></li>
+        <li><a href="#" class="insta"><span class="visually-hidden">Instagram</span></a></li>
+        <li><a href="#" class="tw"><span class="visually-hidden">Twiter</span></a></li>
     </ul>
     <a class="footer-html " href="https://htmlacademy.ru/"><span class="visually-hidden">ссылка на академию</span></a>
     </div>
