--- a/inner.html
+++ b/inner.html
@@ -107,28 +107,34 @@
     <div class="list-item">
       <img src="img/item-2.jpg" alt="Профессиональная селфи-палка ">
       <div class="items-descrip">
-      <h3><a href="#">Профессиональная селфи-палка</a></h3>
+      <h3><a href="#">Профессиональная<br> селфи-палка</a></h3>
       <b>1 500 руб.</b>
         </div>
     </div>
     <div class="list-item">
       <img src="img/item-3.jpg" alt="Непотопляемая селфи-палка">
+      <div class="items-descrip">
       <h3><a href="#">Непотопляемая селфи-палка</a></h3>
       <b>2 500 руб.</b>
+        </div>
     </div>
     <div class="list-item">
       <img src="img/item-4.jpg" alt="Селфи-палка «Следуй за мной»">
-      <h3><a href="#">Селфи-палка «Следуй за мной»</a></h3>
+      <div class="items-descrip">
+      <h3><a href="#">Селфи-палка «Следуй за <br>мной»</a></h3>
       <b>4 900 руб.</b>
+        </div>
     </div>
     </div>
-    <ul class="pages">
-      <li><button class="page-list button">Назад</button></li>
-      <li><button class="page-list button">1</button></li>
-      <li><button class="page-list button">2</button></li>
-      <li><button class="page-list button">3</button></li>
-      <li><button class="page-list button">Вперед</button></li>
-    </ul>
+    <div class="pages">
+      <a class="page-list button">Назад</a>
+      <ul class="pages-numbers">
+      <li class="page-list button">1</li>
+      <li class="page-list button">2</li>
+      <li class="page-list button">3</li>
+       </ul>
+      <a class="page-list button">Вперед</a>
+    </div>
     <span class="list-item-new">New</span>
     </div>
 </section>
@@ -141,12 +147,12 @@
   <div class="footer-up">
     <h2>DEVICE</h2>
     <div class="footer-3">
-  <span class="user-name">Валентин Петухов</span>
-  <ul class="footer-menu-small">
-    <li><a href="#">Выйти</a></li>
-    <li><a href="#">Сравнить</a></li>
-    <li><a href="#">Корзина</a></li>
-  </ul>
+  <a class="user-name">Валентин Петухов</a>
+  
+    <a class="sign-out" href="#">Выйти</a>
+    <a class="compare" href="#">Сравнить</a>
+    <a class="cart" href="#">Корзина</a>
+  
     </div>
   </div>
   <div class="footer-middle">
